--- a/app/src/main/res/layout/standard_game_creation.xml
+++ b/app/src/main/res/layout/standard_game_creation.xml
@@ -311,16 +311,17 @@
                             android:text="@string/lblMinus" />
 
                         <EditText
-							android:id="@+id/txtAttackPoints"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:clickable="false"
-							android:focusable="false"
-							android:focusableInTouchMode="false"
-							android:gravity="center"
-							android:inputType="number"
-							android:minWidth="50dp"
-							android:state_enabled="false"/>
+                            android:id="@+id/txtAttackPoints"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            android:gravity="center"
+                            android:inputType="number"
+                            android:minWidth="50dp"
+                            android:state_enabled="false"
+                            android:textColor="@color/white"/>
 
                         <Button
                             android:id="@+id/btnPlusAttackPoints"
@@ -376,16 +377,17 @@
                             android:text="@string/lblMinus" />
 
                         <EditText
-							android:id="@+id/txtDefensePoints"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:clickable="false"
-							android:focusable="false"
-							android:focusableInTouchMode="false"
-							android:gravity="center"
-							android:inputType="number"
-							android:minWidth="50dp"
-							android:state_enabled="false"/>
+                            android:id="@+id/txtDefensePoints"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            android:gravity="center"
+                            android:inputType="number"
+                            android:minWidth="50dp"
+                            android:state_enabled="false"
+                            android:textColor="@color/white"/>
 
                         <Button
 							android:id="@+id/btnPlusDefensePoints"
